--- a/frontend/popup.html
+++ b/frontend/popup.html
@@ -1,16 +1,31 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text to PDF Converter</title>
     <!-- Include Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 w-64 h-screen flex flex-col justify-center items-center">
-    <div class="text-xl text-slate-300 font-bold mb-3 mx-auto">Text to PDF Converter</div>
-    <p class="text-sm mb-4 mr-4 ml-4">Right click and select "Convert into pdf" </p>
-    <a href="http://localhost:5000/" target="_blank" class="bg-blue-500  hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
-      View All PDFs
-    </a>
+<body class="bg-gray-100 w-64 flex flex-col justify-between rounded-xl shadow-lg">
+
+    <!-- Title Section -->
+    <div class="text-2xl text-gray-800 font-semibold mb-4 mx-auto text-center">
+        Text to PDF Converter
+    </div>
+
+    <!-- Description Section -->
+    <div class="text-md text-gray-600 mb-4 px-6 text-center">
+        Select the text you want to convert, right-click, and choose "Convert into PDF" from the menu.
+    </div>
+
+    <!-- View PDFs Button -->
+    <div class="px-6 pb-4 w-full text-center">
+        <a href="http://localhost:5000/" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-6 rounded-lg shadow-lg transform transition duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">
+            View All PDFs
+        </a>
+    </div>
+
 </body>
 </html>
-
